# odil-timel-mini-labelStudio

./: .env.example  .gitignore  CITATION.cff  DEPLOY.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  wsgi.py
data/: mapping_old_new_img_filename.tsv  reconcile_timel_prepared.csv  timel-taxonomy_enriched.json  timel_reconcile.sqlite
scripts/: backup_db.sh
services/: data.py  db.py
static/: app.css  app.js
templates/: base.html  correction.html  login.html  table.html
